# Linux-Administration-Project

part1/: Directory_Creation.sh  part1_1Ans.txt  part1_2Ans.txt  project_dir.tar
part1/project_dir/: hello.c  hello.h  main.c  main.h
part1/scripts/: userdef
part2/Cmake_Project/Application/: CMakeLists.txt
part2/Cmake_Project/Modules/caesar_cipher/: CMakeLists.txt
part2/Cmake_Project/Modules/xor_cipher/: CMakeLists.txt
part2/Makefile_Project/Application/: Makefile  output
part3/: client  client.c  server  server.c
